<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/login_bg"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar_homescreen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/welcome_guest"
                    android:textColor="@android:color/holo_red_dark" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/match_logo"
                    android:layout_marginTop="@dimen/general_app_margin"
                    android:layout_height="150dp" />
                <LinearLayout
                    android:id="@+id/lUsername"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/general_app_margin"
                    android:layout_marginStart="@dimen/general_app_margin"
                    android:layout_marginTop="@dimen/general_app_margin"
                    android:background="@android:color/transparent"
                    android:gravity="center|end"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/general_app_margin"
                        android:tint="@android:color/holo_red_dark"
                        android:layout_marginStart="@dimen/general_app_margin"
                        android:src="@drawable/ic_emailaddress" />

                    <EditText
                        android:id="@+id/userEmailET"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="-20dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:hint="@string/enterEmail"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/lPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/general_app_margin"
                    android:layout_marginStart="@dimen/general_app_margin"
                    android:background="@android:color/transparent"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/general_app_margin"
                        android:layout_marginStart="@dimen/general_app_margin"
                        android:tint="@android:color/holo_red_dark"
                        android:src="@drawable/password" />

                    <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="-20dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/darker_gray" />

                <Button
                    android:id="@+id/loginBTN"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/primary_blue_button"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

    </LinearLayout>



</LinearLayout>